--- a/sass/_blocks/_blocks.scss
+++ b/sass/_blocks/_blocks.scss
@@ -1,6 +1,9 @@
 @import "visually-hidden";
 @import "container";
 @import "header";
-@import "hero"
+@import "hero";
+@import "bulid";
+@import "stories";
+@import "ready";
 
 
