--- a/sass/_blocks/_header.scss
+++ b/sass/_blocks/_header.scss
@@ -33,6 +33,7 @@
     color: #FFFFFF;
     text-align: center;
     text-decoration: none;
+    transition: all 0.4s ease;
     
     &:hover {
         background: #FFFFFF;
@@ -41,9 +42,9 @@
     }
     
     &:active {
-        border: 2px solid #416367;
-        color: #416367;
-        background-color: #014E56;
+        background: #FFFFFF;
+        border-radius: 24px;
+        color: #002529;
     }
 }
 
@@ -51,7 +52,7 @@
      
         display: none;
         margin-left: auto;
-        padding: 16px 0;
+        margin-right: 0;
         font-size: 20px;
         border: none;
         color: #FFFFFF;
@@ -110,6 +111,8 @@
 
 }
 
+
+
 @media only screen and (max-width:576px){
     
     .header{
@@ -130,6 +133,7 @@
     
     .site-header__btn{
         display: block;
+       
         
         
     }
@@ -139,6 +143,12 @@
 .site-header {
     padding-top: 48px;
     padding-bottom: 80px;
+}
+
+.site-header__inner {
+    width: 100%;
+    max-width: 327px;
+    align-items: center;
 }
 
     .site-header__logo {
@@ -157,5 +167,56 @@
 
     .site-header__btn {
         display: block;
+        font-size: 20px;
     }
 }
+
+
+// body {
+//     align-items: center;
+//     display: flex;
+//     justify-content: center;
+//     height: 100vh;
+//     margin: 0;
+//   }
+//   .manu {
+//     background-color: transparent;
+//     border: none;
+//     cursor: pointer;
+//     display: flex;
+//     padding: 0;
+//   }
+//   .line {
+//     fill: none;
+//     stroke: black;
+//     stroke-width: 6;
+//     transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
+//       stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
+//   }
+//   .line1 {
+//     stroke-dasharray: 60 207;
+//     stroke-width: 6;
+//   }
+//   .line2 {
+//     stroke-dasharray: 60 60;
+//     stroke-width: 6;
+//   }
+//   .line3 {
+//     stroke-dasharray: 60 207;
+//     stroke-width: 6;
+//   }
+//   .opened .line1 {
+//     stroke-dasharray: 90 207;
+//     stroke-dashoffset: -134;
+//     stroke-width: 6;
+//   }
+//   .opened .line2 {
+//     stroke-dasharray: 1 60;
+//     stroke-dashoffset: -30;
+//     stroke-width: 6;
+//   }
+//   .opened .line3 {
+//     stroke-dasharray: 90 207;
+//     stroke-dashoffset: -134;
+//     stroke-width: 6;
+//   }
