--- a/sass/_blocks/_hero.scss
+++ b/sass/_blocks/_hero.scss
@@ -2,33 +2,14 @@
     position: relative;
     background-color: #014E56;
     padding-bottom: 250px;
-    
-    &::before {
-        position: absolute;
-        top: 60px;
-        left: calc(50% - 760px);
-        display: inline-block;
-        width: 200px;
-        height: 200px;
-        background-image: url("../images/Group8.png");
-        background-size: 100px 200px;
-        background-repeat: no-repeat;
-        content: "";
-    } 
-    
-    &::after {
-        position: absolute;
-        display: inline-block;
-        bottom: 0;
-        right: calc(50% - 555px);
-        width: 358px;
-        height: 100px;
-        background-image: url("../images/Group.png");
-        background-size: 358px 100px;
-        background-repeat: no-repeat;
-        content: "";
-    }
+
+    background-image: url("../images/hero-bgi-1.png"), url("../images/Group.png");
+    background-repeat: no-repeat;
+    background-size: 200px 200px, 358px 100px;
+    background-position: calc(50% - 760px) calc(50% - 130px), calc(50% + 385px) bottom;
 }
+    
+    
 
 
 .hero__inner {
@@ -76,9 +57,11 @@
 }
 
 @include max-width(1120px) {
-    .hero::after {
-        right: 30px;
-    }
+
+
+
+
+    
 
     .hero__title {
         font-size: 90px;
@@ -92,10 +75,8 @@
 }
 
 @include max-width(970px) {
-    .hero::after {
-        right: calc(50% - 170px);
-        
-    }
+   
+    
 
     .hero__inner {
         flex-wrap: wrap;
@@ -136,14 +117,15 @@
 
 @include max-width(768px) {
 .hero {
-   
+   background-image: url("../../images/Group.png");
+   background-repeat: no-repeat;
+   background-size: 358px 100px;
+   background-position: calc(50%) bottom;
+
     padding-bottom: 256px;
 }
 
-    .hero::after {
-        right: calc(50% - 170px);
-       
-    }
+    
     
     .hero__inner {
         flex-wrap: wrap;
