add new changes

--- a/sass/_blocks/_blocks.scss
+++ b/sass/_blocks/_blocks.scss
@@ -1,9 +1,16 @@
 @import "visually-hidden";
 @import "container";
 @import "header";
+@import "about-header";
 @import "hero";
+@import "about-hero";
 @import "bulid";
+@import "about-meet";
 @import "stories";
+@import "about-clients";
 @import "ready";
+@import "about-ready";
+@import "footer";
+@import "about-footer";
 
 
