--- a/sass/_blocks/_hero.scss
+++ b/sass/_blocks/_hero.scss
@@ -24,6 +24,8 @@
 }
 
 .hero__title {
+    margin-top: 0;
+    margin-bottom: 0;
     font-style: normal;
     font-weight: 700;
     font-size: 100px;
